[project]
name = "nap-msg"
version = "0.1.0"
description = "CLI relay between moltbot and a Napcat WebSocket backend"
authors = [
    {name = "Ricter Z",email = "ricterzheng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets>=13.1,<14.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
nap-msg = "nap_msg.cli:main"

[tool.poetry]
packages = [{include = "nap_msg", from = "src"}]
